--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,15 @@ jobs:
         with: 
           node-version: "16"
           check-latest: true      
-      - name: Check
-        run: |
-            npm ci
-            npm run lint-diff        
+          
+      - name: Install packages
+        run: npm ci
+        
+      - name: Prettier
+        run: npm run format
+        
+      - name: Lint
+        run: npm run lint
           
       - name: Run pwd
         run: pwd
