eslint settings update2

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint . --ext js,jsx,ts,tsx --fix",
+    "format": "prettier --write \"*.ts\" \"*.js\""    
   },
   "repository": {
     "type": "git",
