--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --ext js,jsx,ts,tsx --fix",
-    "format": "prettier --write \"*.ts\" \"*.js\""    
+    "format": "prettier --write \"*.js\""
   },
   "repository": {
     "type": "git",
