--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,7 @@
     "sourceType": "module"
   },
   "rules": {
-    "indent": ["error", 4],
+    "indent": ["error", 2], //단락 space 4
     "semi": ["error", "always"],
     "keyword-spacing": 0,
     "no-unused-vars": 1,
