--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint . --ext js,jsx,ts,tsx --fix",
+    "lint": "eslint . --ext js,jsx,ts,tsx",
     "format": "prettier --write \"*.js\""
   },
   "repository": {
