--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --ext js,jsx,ts,tsx",
-    "format": "prettier --write \"*.js\""
+    "format": "prettier --write \"*.js\"",
+    "lint:report": "eslint --ext .js --output-file eslint_report.json --format json "
   },
   "repository": {
     "type": "git",
