--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --ext js,jsx,ts,tsx",
     "format": "prettier --write \"*.js\"",
-    "lint:report": "eslint --ext .js --output-file eslint_report.json --format json "
+    "lint:report": "eslint --ext js,jsx,ts,tsx --output-file eslint_report.json --format json "
   },
   "repository": {
     "type": "git",
